# pdns-slave

./: .gitignore  CMakeLists.txt
conf/: dhcpd.conf.default  hosts.json.default  pdns-slave.json.default  sql.json.conf
src/: CMakeLists.txt
src/Business/: PdnsSlave.cpp  PdnsSlave.h
src/DBO/: SqlConfiguration.cpp  SqlConfiguration.h
src/DBO/Actions/: Action.cpp  Action.h  ActionAddDomain.cpp  ActionAddDomain.h  ActionAddHost.cpp  ActionAddHost.h  ActionDelDomain.cpp  ActionDelDomain.h  ActionDelHost.cpp  ActionDelHost.h
src/DataAccess/: AbstractSql.cpp  AbstractSql.h  HostsConfig.cpp  HostsConfig.h  MySql.cpp  MySql.h  PdnsSlaveConfig.cpp  PdnsSlaveConfig.h  PgSql.cpp  PgSql.h
src/Interface/: CommandLineParser.cpp  CommandLineParser.h  MainClass.cpp
tests/: CMakeLists.txt
